# ucd-csci2312-pa3

./: CMakeLists.txt  Cluster.cpp  Cluster.h  ClusteringTests.cpp  ClusteringTests.h  Exceptions.cpp  Exceptions.h  KMeans.cpp  KMeans.h  Point.cpp  Point.h  README.md  main.cpp  points1.csv  points2499.csv  points4_ex.csv  points4_large.csv
